fix(timeline): long service names do not overflow
- long service names no longer overflow from the left column onto the
timeline

--- a/src/pages/trace/tree.scss
+++ b/src/pages/trace/tree.scss
@@ -15,7 +15,8 @@
       margin-right: auto;
       padding-right: 1em;
       border-right: 1px solid rgb(235, 235, 235);
-      min-width: 200px;
+      width: 250px;
+      text-overflow: ellipsis;
     }
     
     > div:last-child {
